--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    /* Modules */
-    "rootDir": "src" /* Specify the root folder within your source files. */,
-
-    /* Emit */
-    "outDir": "dist" /* Specify an output folder for all emitted files. */
-    // "noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */
+    "target": "ES2020",
+    "module": "ESNext",
+    "rootDir": "src",
+    "outDir": "dist",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "strict": true
+    // ... other options ...
   },
-  "include": ["src", "types"],
+  "include": ["src/**/*"],
+  "exclude": ["dist"],
   "typeRoots": ["./node_modules/@types", "./src/types"]
 }
